Bug 827899 - Selected Tab Overlaps Finished Download Animation. r=shorlander
UltraBlame original commit: e5ac5de0c94a4a0b6d46b1f6c5dfe50891f0d84a

--- a/browser/themes/pinstripe/downloads/downloads.css
+++ b/browser/themes/pinstripe/downloads/downloads.css
@@ -277,6 +277,8 @@ richlistitem[type="download"]:hover > stack > .downloadButton.downloadRetry:acti
 
 
   position: relative;
+  
+  z-index: 1;
 }
 
 
